After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 779480 - adaptivedemux: Fix double mutex unlock
adaptivedemux: Fix double mutex unlock
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.10.4
Other Linux
: Normal normal
: 1.10.5
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-03-02 16:09 UTC by GstBlub
Modified: 2017-03-17 10:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
adaptivedemux: Fix double mutex unlock (1.34 KB, patch)
2017-03-02 16:09 UTC, GstBlub
committed Details | Review

Description GstBlub 2017-03-02 16:09:28 UTC
Created attachment 347084 [details] [review]
adaptivedemux: Fix double mutex unlock

I found a code path in gst_adaptive_demux_stream_download_uri() that can lead to the manifest lock being unlocked twice.
Comment 1 Sebastian Dröge (slomo) 2017-03-02 17:03:35 UTC
commit 8d10d29c2420c2580686d68316eca2ff326b5272
Author: Thomas Bluemel <tbluemel@control4.com>
Date:   Mon Feb 27 14:54:43 2017 -0700

    adaptivemutex: Fix double mutex unlock
    
    https://bugzilla.gnome.org/show_bug.cgi?id=779480