adaptivemutex: Fix double mutex unlock

https://bugzilla.gnome.org/show_bug.cgi?id=779480